--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -226,20 +226,81 @@ jobs:
       #     Write-Host "Workflow failed for $repoName!"
       #     # dding "github action fail :( $repoName"
 
+      - name: Inno Package
+        shell: cmd
+        run: |
+          ls
+          cd detection-nut\cpp-impl\setup\exe || exit /b 1
+          build.bat || exit /b 1
+          
+          build_update.bat || exit /b 1
+      - name: Inno update Package
+        shell: cmd
+        run: |
+          ls
+          cd detection-nut\cpp-impl\setup\exe || exit /b 1
+          build_update.bat || exit /b 1
+      - name: cp update to download server 
+        shell: bash 
+        run: |
+          echo " copy to download server"
+          ls
+          cd detection-nut/cpp-impl/setup/exe 
+          ls Output
+          bash copy.sh
+      - name: Check Status
+        if: ${{ success() }}
+        shell: pwsh
+        run: |
+          $repoName = $env:GITHUB_REPOSITORY.Split('/')[-1]
+          Write-Host "Workflow succeeded for $repoName!"
+          dding "github action success :) for $repoName"
+          
+      - name: Check Status
+        if: ${{ failure() }}
+        shell: pwsh
+        run: |
+          $repoName = $env:GITHUB_REPOSITORY.Split('/')[-1]
+          Write-Host "Workflow failed for $repoName!"
+          dding "github action fail :( $repoName"
       - name: Ls dir
         run: |
           echo "%cd%"
           dir
-          cd detection-continuity
+          cd quick-print
           dir 
-
+          
       - name: Archive binaries
         uses: actions/upload-artifact@v4
         with:
           name: librel64
           path: |
-            detection-continuity\librel64
+            detection-nut\cpp-impl\librel64
           retention-days: 1 # <= 这里可以设置保留天数
+
+      - name: Archive binaries
+        uses: actions/upload-artifact@v4
+        with:
+          name: QuickPrintSetupArtifact
+          path: |
+            detection-nut\cpp-impl\setup\exe\Output\DetectionNutSetup.exe
+            detection-nut\cpp-impl\setup\exe\Output\DetectionNutUpdateSetup.exe
+          retention-days: 1 # <= 这里可以设置保留天数
+          
+      # - name: Ls dir
+      #   run: |
+      #     echo "%cd%"
+      #     dir
+      #     cd detection-continuity
+      #     dir 
+
+      # - name: Archive binaries
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: librel64
+      #     path: |
+      #       detection-nut\librel64
+      #     retention-days: 1 # <= 这里可以设置保留天数
       # - name: Build
       #   working-directory: ${{ env.work_directory }}
       #   run: |
