--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -108,7 +108,8 @@ jobs:
         run: |
           $env:GIT_TRACE = "1"
           # git clone git@github.com:charlessoft/detection-continuity.git  $env:work_directory
-          git clone https://oauth2:${{ secrets.charlessoft_TOKEN }}@github.com/charlessoft/detection-nut.git
+          #git clone https://oauth2:${{ secrets.charlessoft_TOKEN }}@github.com/charlessoft/detection-nut.git
+          git clone git@github.com:charlessoft/detection-nut.git
 
 
 
