--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,20 +25,20 @@ jobs:
       work_directory: detection-nut  # 设置环境变量
     steps:
 
-      - name: Setup SSH
-        uses: webfactory/ssh-agent@v0.5.3
-        with:
-          ssh-private-key: ${{ secrets.SSH_KEY }}
+      # - name: Setup SSH
+      #   uses: webfactory/ssh-agent@v0.5.3
+      #   with:
+      #     ssh-private-key: ${{ secrets.SSH_KEY }}
 
           
-      - name: Cache SSH known hosts
-        id: cache-ssh-hosts
-        uses: actions/cache@v3
-        with:
-          path: ~/.ssh/known_hosts
-          key: ssh-known-hosts-${{ runner.os }}-v1
-          restore-keys: |
-            ssh-known-hosts-${{ runner.os }}-
+      # - name: Cache SSH known hosts
+      #   id: cache-ssh-hosts
+      #   uses: actions/cache@v3
+      #   with:
+      #     path: ~/.ssh/known_hosts
+      #     key: ssh-known-hosts-${{ runner.os }}-v1
+      #     restore-keys: |
+      #       ssh-known-hosts-${{ runner.os }}-
             
       - name: Checkout
         uses: actions/checkout@v4
@@ -109,7 +109,8 @@ jobs:
           $env:GIT_TRACE = "1"
           # git clone git@github.com:charlessoft/detection-continuity.git  $env:work_directory
           #git clone https://oauth2:${{ secrets.charlessoft_TOKEN }}@github.com/charlessoft/detection-nut.git
-          git clone git@github.com:charlessoft/detection-nut.git
+          # git clone git@github.com:charlessoft/detection-nut.git
+          git clone https://oauth2:${{ secrets.MYUSER_TOKEN }}@${{ github.event.client_payload.gitaddress }}
 
 
 
