--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -50,10 +50,10 @@ jobs:
       #   with:
       #     ssh-private-key: ${{ secrets.SSH_GITEE_PRIVATE_KEY }}
           
-      - name: Add Gitee to known hosts
-        run: |
-          ssh-keyscan gitee.com >> ~/.ssh/known_hosts
-          ssh-keyscan github.com >> ~/.ssh/known_hosts
+      # - name: Add Gitee to known hosts
+      #   run: |
+      #     ssh-keyscan gitee.com >> ~/.ssh/known_hosts
+      #     ssh-keyscan github.com >> ~/.ssh/known_hosts
 
 
       - uses: lukka/get-cmake@latest
