--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,10 +25,10 @@ jobs:
       work_directory: detection-nut  # 设置环境变量
     steps:
 
-      # - name: Setup SSH
-      #   uses: webfactory/ssh-agent@v0.5.3
-      #   with:
-      #     ssh-private-key: ${{ secrets.SSH_KEY }}
+      - name: Setup SSH
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.SSH_KEY }}
 
           
       # - name: Cache SSH known hosts
@@ -111,7 +111,9 @@ jobs:
           # git clone git@github.com:charlessoft/detection-continuity.git  $env:work_directory
           #git clone https://oauth2:${{ secrets.charlessoft_TOKEN }}@github.com/charlessoft/detection-nut.git
           # git clone git@github.com:charlessoft/detection-nut.git
-          git clone https://oauth2:${{ secrets.MYUSER_TOKEN }}@${{ github.event.client_payload.gitaddress }}
+          # git clone https://oauth2:${{ secrets.MYUSER_TOKEN }}@${{ github.event.client_payload.gitaddress }}
+          git clone git@github.com:charlessoft/detection-nut.git
+          
 
 
 
