--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,7 +36,7 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan github.com >> ~/.ssh/known_hosts
+          # ssh-keyscan github.com >> ~/.ssh/known_hosts
 
           
       # - name: Cache SSH known hosts
@@ -58,10 +58,10 @@ jobs:
       #   with:
       #     ssh-private-key: ${{ secrets.SSH_GITEE_PRIVATE_KEY }}
           
-      # - name: Add Gitee to known hosts
-      #   run: |
-      #     ssh-keyscan gitee.com >> ~/.ssh/known_hosts
-      #     ssh-keyscan github.com >> ~/.ssh/known_hosts
+      - name: Add Gitee to known hosts
+        run: |
+          ssh-keyscan gitee.com >> ~/.ssh/known_hosts
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
 
 
       - uses: lukka/get-cmake@latest
