--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,6 +36,17 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
+
+          # 检查文件是否存在和大小
+          ls -la ~/.ssh/id_rsa
+          
+          # 检查密钥格式（只显示第一行和最后一行）
+          head -1 ~/.ssh/id_rsa
+          tail -1 ~/.ssh/id_rsa
+          
+          # 检查密钥是否可以被SSH识别（不显示内容）
+          ssh-keygen -l -f ~/.ssh/id_rsa || echo "Key format error"
+          
           # ssh-keyscan github.com >> ~/.ssh/known_hosts
           echo "github.com ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIOMqqnkVzrm0SdG6UOoqKLsabgH5C9okWi0dh2l9GKJl" >> ~/.ssh/known_hosts
           echo "github.com ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNTYAAAAIbmlzdHAyNTYAAABBBEmKSENjQEezOmxkZMy7opKgwFB9nkt5YRrYMjNuG5N87uRgg6CLrbo5wAdT/y6v0mKV0U2w0WZ2YB/++Tpockg=" >> ~/.ssh/known_hosts
