--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -185,7 +185,7 @@ jobs:
         working-directory: ${{ env.work_directory }}
         run: |
           set PYTHONIOENCODING=utf-8
-          cd tools/external_lib
+          cd cpp-impl/tools/external_lib
           pip install -r requirements.txt
           python download.py --arch x64 --build_types dbg --mul
           python download.py --arch x64 --build_types rel --mul
