--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -183,12 +183,19 @@ jobs:
       - name: Build with MSBuild
         run: msbuild -m -t:Build -p:Configuration=${{ matrix.configuration }} /p:Platform=${{ matrix.platform }} detection-nut/cpp-impl/build/detection-nut.sln
 
-      - name: Test - Check Runtime DLLs in System32
+      - name: Copy Required Runtime DLLs
+        working-directory: ${{ env.work_directory }}
         shell: pwsh
         run: |
-          Write-Host "=== Testing Runtime DLL Availability ==="
-          $system32 = "$env:SystemRoot\System32"
-          Write-Host "System32 path: $system32"
+          Write-Host "=== 拷贝必需的运行时DLL ==="
+          $outputDir = "cpp-impl\librel64"
+          Write-Host "目标目录: $outputDir"
+          
+          # 确保输出目录存在
+          if (-not (Test-Path $outputDir)) {
+              New-Item -ItemType Directory -Path $outputDir -Force
+              Write-Host "创建输出目录: $outputDir"
+          }
           
           # VC++ Redistributable DLL（必须拷贝的）
           $vcRedistDlls = @(
@@ -197,7 +204,7 @@ jobs:
               "VCRUNTIME140_1.dll"
           )
           
-          # Universal CRT DLL（可能在不同位置）
+          # Universal CRT DLL
           $ucrtDlls = @(
               "api-ms-win-crt-runtime-l1-1-0.dll",
               "api-ms-win-crt-heap-l1-1-0.dll",
@@ -210,66 +217,76 @@ jobs:
               "api-ms-win-crt-locale-l1-1-0.dll"
           )
           
-          $searchPaths = @(
-              "$env:SystemRoot\System32",
-              "$env:SystemRoot\System32\downlevel",
-              "$env:SystemRoot\SysWOW64"
-          )
+          $errors = 0
+          $success = 0
           
-          Write-Host "`n=== VC++ Redistributable DLL检查 ==="
-          $vcFoundCount = 0
+          Write-Host "`n=== 拷贝VC++ Redistributable DLL ==="
           foreach ($dll in $vcRedistDlls) {
-              $found = $false
-              foreach ($path in $searchPaths) {
-                  $fullPath = "$path\$dll"
-                  if (Test-Path $fullPath) {
-                      $fileInfo = Get-Item $fullPath
-                      Write-Host "✓ FOUND: $dll in $path (Size: $($fileInfo.Length) bytes)" -ForegroundColor Green
-                      $vcFoundCount++
-                      $found = $true
-                      break
+              $sourcePath = "$env:SystemRoot\System32\$dll"
+              $targetPath = "$outputDir\$dll"
+              
+              if (Test-Path $sourcePath) {
+                  try {
+                      Copy-Item $sourcePath $targetPath -Force
+                      Write-Host "✓ 成功拷贝: $dll" -ForegroundColor Green
+                      $success++
+                  } catch {
+                      Write-Host "✗ 拷贝失败: $dll - $($_.Exception.Message)" -ForegroundColor Red
+                      $errors++
                   }
-              }
-              if (-not $found) {
-                  Write-Host "✗ NOT FOUND: $dll" -ForegroundColor Red
+              } else {
+                  Write-Host "✗ 源文件不存在: $dll" -ForegroundColor Red
+                  $errors++
               }
           }
           
-          Write-Host "`n=== Universal CRT DLL检查 ==="
-          $ucrtFoundCount = 0
+          Write-Host "`n=== 拷贝Universal CRT DLL ==="
           foreach ($dll in $ucrtDlls) {
-              $found = $false
-              foreach ($path in $searchPaths) {
-                  $fullPath = "$path\$dll"
-                  if (Test-Path $fullPath) {
-                      $fileInfo = Get-Item $fullPath
-                      Write-Host "✓ FOUND: $dll in $path (Size: $($fileInfo.Length) bytes)" -ForegroundColor Green
-                      $ucrtFoundCount++
-                      $found = $true
-                      break
+              $sourcePath = "$env:SystemRoot\System32\downlevel\$dll"
+              $targetPath = "$outputDir\$dll"
+              
+              if (Test-Path $sourcePath) {
+                  try {
+                      Copy-Item $sourcePath $targetPath -Force
+                      Write-Host "✓ 成功拷贝: $dll" -ForegroundColor Green
+                      $success++
+                  } catch {
+                      Write-Host "✗ 拷贝失败: $dll - $($_.Exception.Message)" -ForegroundColor Red
+                      $errors++
                   }
-              }
-              if (-not $found) {
-                  Write-Host "? NOT FOUND: $dll (可能是系统管理的虚拟DLL)" -ForegroundColor Yellow
+              } else {
+                  Write-Host "? 源文件不存在: $dll (可能不需要)" -ForegroundColor Yellow
               }
           }
           
-          Write-Host "`n=== 汇总 ==="
-          Write-Host "VC++ Redistributable DLL: $vcFoundCount/$($vcRedistDlls.Count) 找到" -ForegroundColor Green
-          Write-Host "Universal CRT DLL: $ucrtFoundCount/$($ucrtDlls.Count) 找到" -ForegroundColor Yellow
+          Write-Host "`n=== 拷贝结果汇总 ==="
+          Write-Host "成功拷贝: $success 个DLL" -ForegroundColor Green
+          if ($errors -gt 0) {
+              Write-Host "拷贝失败: $errors 个DLL" -ForegroundColor Red
+          }
           
-          Write-Host "`n=== 建议 ==="
-          if ($vcFoundCount -eq $vcRedistDlls.Count) {
-              Write-Host "✓ 所有关键的VC++ Runtime DLL都找到了，可以进行拷贝" -ForegroundColor Green
+          # 列出输出目录中的所有DLL
+          Write-Host "`n=== 输出目录中的DLL文件 ==="
+          if (Test-Path $outputDir) {
+              Get-ChildItem "$outputDir\*.dll" | ForEach-Object {
+                  Write-Host "📄 $($_.Name) ($(($_.Length/1KB).ToString('F1')) KB)"
+              }
+          }
+          
+          # 只有在关键DLL拷贝失败时才停止
+          $criticalErrors = 0
+          foreach ($dll in $vcRedistDlls) {
+              if (-not (Test-Path "$outputDir\$dll")) {
+                  $criticalErrors++
+              }
+          }
+          
+          if ($criticalErrors -gt 0) {
+              Write-Host "`n❌ 关键的VC++ Runtime DLL拷贝失败，停止构建" -ForegroundColor Red
+              exit 1
           } else {
-              Write-Host "✗ 部分VC++ Runtime DLL未找到" -ForegroundColor Red
+              Write-Host "`n✅ 所有关键DLL拷贝完成，继续执行" -ForegroundColor Green
           }
-          
-          Write-Host "Universal CRT DLL通常由Windows系统管理，可能不需要手动拷贝" -ForegroundColor Yellow
-          
-          # 停止后续步骤执行 - 强制退出
-          Write-Host "`n=== 测试完成，停止后续步骤执行 ==="
-          exit 1
 
       # - name: Build with CTest
       #   working-directory: ${{ env.work_directory }}
