--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -288,6 +288,35 @@ jobs:
               Write-Host "`n✅ 所有关键DLL拷贝完成，继续执行" -ForegroundColor Green
           }
 
+      - name: Inno Package
+        shell: cmd
+        run: |
+          ls
+          cd detection-nut\setup\exe 
+          if errorlevel 1 exit 1
+          
+          build.bat
+          if errorlevel 1 exit 1
+          
+          build_update.bat 
+          if errorlevel 1 exit 1
+      - name: Inno update Package
+        shell: cmd
+        run: |
+          ls
+          cd detection-nut\setup\exe || exit /b 1
+          build_update.bat
+          if errorlevel 1 exit 1
+          
+      - name: cp update to download server 
+        shell: bash 
+        run: |
+          echo " copy to download server"
+          ls
+          cd detection-nut/setup/exe 
+          ls Output
+          bash copy.sh
+
       # - name: Build with CTest
       #   working-directory: ${{ env.work_directory }}
       #   shell: powershell
